[package]
name = "async-variadic"
version = "1.1.0"
edition = "2021"
authors = ["Thomas Holloway <nyxtom@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Simple async variadic functions in Rust with trait bounds"
homepage = "https://github.com/nyxtom/async-variadic"
repository = "https://github.com/nyxtom/async-variadic"
keywords = ["async", "variadic", "traits", "middleware", "futures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
